--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,18 @@
+Sat Feb 21 23:28:58 2004  Tim Janik  <timj@gtk.org>
+
+	* cvs copied sfidl sources:
+
+	* sfidl-cbase.cc, sfidl-cbase.h:
+	* sfidl-hostc.cc, sfidl-hostc.h: 
+	* sfidl-corec.cc, sfidl-corec.h:
+	* sfidl-clientc.cc, sfidl-clientc.h: from sfidl-generator.*
+
+	* sfidl-clientcxx.cc, sfidl-clientcxx.h: from sfidl-cxx.*
+
+	* sfidl-corecxx.cc, sfidl-corecxx.h: from sfidl-module.*
+
+	* sfidl-cxxbase.cc, sfidl-cxxbase.h: from sfidl-cxx.*
+
 Thu Feb 19 03:59:07 2004  Tim Janik  <timj@gtk.org>
 
 	* sfiparams.[hc]: allowed choice values to have translatable labels
@@ -1999,7 +2014,7 @@ Fri Oct  4 02:06:15 2002  Tim Janik  <timj@gtk.org>
 
 Fri Oct  4 01:18:21 2002  Stefan Westerfeld <stefan@space.twc.de>
 
-        * sfi/sfidl.cc: generate proper default initialization for sequences
+        * sfidl.cc: generate proper default initialization for sequences
 	when @= is omitted (instead of segfaulting), FBlock support, cleanup:
 	add name of arguments/arrays by the caller, not by createTypeCode
 
