fix simple assigments to choice values.
Mon Feb 23 17:30:15 2004  Tim Janik  <timj@gtk.org>

        * sfidl-parser.cc (parseChoiceValue): fix simple assigments to
        choice values.

svn path=/trunk/; revision=2023

--- a/sfi/ChangeLog
+++ b/sfi/ChangeLog
@@ -1,3 +1,8 @@
+Mon Feb 23 17:30:15 2004  Tim Janik  <timj@gtk.org>
+
+	* sfidl-parser.cc (parseChoiceValue): fix simple assigments to
+	choice values.
+
 Mon Feb 23 04:04:38 2004  Stefan Westerfeld  <stefan@space.twc.de>
 
 	* sfidl-parser.cc: Bugfix: It is now possible to use fully qualified
