--- a/TODO
+++ b/TODO
@@ -42,8 +42,6 @@ FIXMES:
 - auto-connect viewable-changed to gadget notebooks
 - add one-shot property to gxk-gadget-factories
 - remove/rename test-string.bse
-- compressor gui: http://www.samsonwireless.net/store/product.asp?sku=EM.CLX-440&nav=m
-- migrate artscompressor threshold/output to dB (keep compat code)
 - introduce Volume() pspec type in idl files that the GUI can provide a dB slider for
 - fix syndrum parameter scale
 - upon project playback-stop, discard all pending events (at least note-on+note-off) on its midi receiver
@@ -266,55 +264,54 @@ Effects:
   (main source for http://zynaddsubfx.sourceforge.net)
 
 GSL:
-* sample loader currently hard codes 440.0 for osc_freq
-  Person        S T
-- [stw]         2 9 LP -> LP transforms or zero/poles
-- [stw]         1 8 3-stage joining FFT code
-- [stw]         4   /usr/share/doc/sfftw-dev/README.hacks
-- [stw]         1 7 FFT L-case optimiaztions
-- [stw]         5 1 .PAT loader (move)
-- [stw/timj]      9 port plugins listed in plugins/Makefile.am:UNPORTED
-- [stw/timj]    6 3 1) OscTableEntry sizes (wave_table_size ())
-- [stw/timj]    7 3 2) development of gsl_osc_table_create() frequencies
-- [stw/timj]    4 4 3) PWM scaling
-- [stw/timj]    6 6 Filter boundary conditions?
+  * sample loader currently hard codes 440.0 for osc_freq
+    Person        S T
+75- [stw]         2 9 LP -> LP transforms or zero/poles
+76- [stw]         1 8 3-stage joining FFT code
+76- [stw]         4   /usr/share/doc/sfftw-dev/README.hacks
+76- [stw]         1 7 FFT L-case optimiaztions
+  - [stw]         5 1 .PAT loader (move)
+74- [stw/timj]    6 5 filter evaluate function (to draw graph)
+  - [stw/timj]      9 port plugins listed in plugins/Makefile.am:UNPORTED
+  - [stw/timj]    6 3 1) OscTableEntry sizes (wave_table_size ())
+  - [stw/timj]    7 3 2) development of gsl_osc_table_create() frequencies
+  - [stw/timj]    4 4 3) PWM scaling
+  - [stw/timj]    6 6 Filter boundary conditions?
                     Also, need 2stage filters with way smaller errors
                     Filter: Oppenheim Schaefer page.441 2stage filters implementation
                         (2stage pair finding by single (zero, pole) pair plus
                         conj. complex pair)
-- [timj]        9   Buffered data handles for coarse seek
-- [timj]        8   WaveOsc: prop for stereo channel
-- [timj]        2 9 API for lp/hp/bp/bs generation from array of roots and poles
-                    (requires zero and poles with ->im != 0 to occour in
-                    conjugated complex pairs)
-- [timj]        6   in API and docs, s/roots/zeros/
-- [timj]        4   gsltests: change freq input, so that [0..1] => [0..pi]
-- [timj]        5   gsltest: swap epsilon and steepness params for t2* filters
-- [timj]        7 6 Async DCache read-ahead thread creation
-- [stw/timj]    6 5 filter evaluate function (to draw graph)
+  - [timj]        9   Buffered data handles for coarse seek
+  - [timj]        8   WaveOsc: prop for stereo channel
+  - [timj]        2 9 API for lp/hp/bp/bs generation from array of roots and poles
+                      (requires zero and poles with ->im != 0 to occour in
+                      conjugated complex pairs)
+  - [timj]        6   in API and docs, s/roots/zeros/
+  - [timj]        4   gsltests: change freq input, so that [0..1] => [0..pi]
+  - [timj]        5   gsltest: swap epsilon and steepness params for t2* filters
+  - [timj]        7 6 Async DCache read-ahead thread creation
 
 sfidl:
   - sfidl.1: document the command line options sfidl offers
   - sfidl-manual.texi: complete the documentation
-  - stefan: can we optimize cxx_value_get_sequence() returns?
-  - handle Procedure {} namesace in namespacehelper
-  - rename nspace.printableForm() to something that expresses namespace relativity
-90- bse-plugin-generator: Effect->Property structure copies don't work for strings (merely a pointer copy)
+80- handle Procedure {} namespace in namespacehelper
+85- rename nspace.printableForm() to something that expresses namespace relativity
+  - bse-plugin-generator: Effect->Property structure copies don't work for strings (merely a pointer copy)
     (at least SfiRec will probably not do a deep copy)
-51- reenable signals in bseprocidl
-50- error "bseamplifier.idl:71: error: double definition of 'Bse::Amplifier' as same type" should
+  - reenable signals in bseprocidl
+  - error "bseamplifier.idl:71: error: double definition of 'Bse::Amplifier' as same type" should
     indicate where the previous definition was
-49- support Neutral choice values, currently hardcoded for BseErrorType in bseprocidl
+  - support Neutral choice values, currently hardcoded for BseErrorType in bseprocidl
   - choice type should have validation function
   - handle non-validated sequences and records in generation code (things
     can be demarshalled in non-validated form after incompatible changes)
-  - finish Sfidl::CodeGenerator::rename (relative naming)
+90- finish Sfidl::CodeGenerator::rename (relative naming)
   parser:
   - sfidl-parser.cc: property keyword should be nuked
   - clean up enum code to use ChoiceValue value or sequentialValue, without
     doing computations
   extensions:
-20- signals should be specified in idl files (and have to be documentable)
+  - signals should be specified in idl files (and have to be documentable)
   - sfidl --output=foo.cc should be implemented
   code generation:
     - extra namespace for C++ client code
@@ -322,14 +319,15 @@ sfidl:
     - NULL pointer handling is broken
   C++ language binding:
     - defaults for records (should be fetched remotely ; missing type blurb)
+      what's "remotely" for types generated by an in-thread host binding though?
     - serialization: can we _really_ only use a template thing?
-      => reorganization of the createTypeCode function
+65     => reorganization of the createTypeCode function
     - should objects _really_ be values?
     - bindings lack testing.
     - records in bseprocidl: how can we figure out the type?
     - dynamic invocation interface missing in C++ binding (properties, methods)
     - later: introduce iterators into sequences
-    - createTypeCode refactoring
+66  - createTypeCode refactoring
       funcFromValue, funcToValue,
       codeVCallArgs
     - should we have toplevel (unnamespaced) symbols?
@@ -343,14 +341,16 @@ STEFAN TODO:
   - BseServer::bse-preferences should be of type Bse::GConfig instead of Sfi::Rec
   - bseplugin.c doesn't use libtool properly ; probably gmodule should be ported to
     libtool
-  - Bse::MidiEvent: should be wire-passable
+70- Bse::MidiEvent: should be wire-passable
   - Makefile.plugins doesn't get regenerated properly
-  - C++ Classes _need_(!) documentation (i.e. Sfi::FBlock, Sfi::String)
+82- C++ Classes _need_(!) documentation (i.e. Sfi::FBlock, Sfi::String)
   - add a dependancy to $SFIDL for beast-gtk/bstrecords.idl
   - rename bindings to client and core (instead of interface and implementation)
   - port arts driver from csl to port-audio
   - write port-audio driver for beast
-  - freeverb parameters are broken (it _says_ dB, but it definitely _is not_
+81- freeverb parameters are broken (it _says_ dB, but it definitely _is not_
     dB)
+81- compressor gui: http://www.samsonwireless.net/store/product.asp?sku=EM.CLX-440&nav=m
+81- migrate artscompressor threshold/output to dB (keep compat code)
 
 vim:set ts=8 sts=2 sw=2:
