--- a/docs/sfidl.1.texi
+++ b/docs/sfidl.1.texi
@@ -23,32 +23,55 @@ SFIDL - SFI IDL Compiler
 
 @table @option
 @item ---help
-	Print usage information.
-@item -I <@var{DIRECTORY}>
-	Add @var{DIRECTORY} to include path.
+	Print general usage information.
+@item ---help <binding>
+	Print usage information for a language binding.
 @item ---version
 	Print program version.
+@c Include Path:
+@item -I <@var{DIRECTORY}>
+	Add @var{DIRECTORY} to include path.
 @item ---print-include-path
 	Print include path.
 @item ---nostdinc
 	Prevents standard include path from being used.
-@item ---prefix <@var{prefix}>
-	C language binding option, sets the prefix for c functions.
-@item ---cxx
+@c Language bindings:
+@item ---client-c
+	Generate C client language binding.
+@item ---client-c
+	Generate C core language binding.
+@item ---host-c
+	Generate C host language binding.
+@item ---client-cxx
 	Generate C++ client language binding.
-@item ---namespace <@var{namespace}>
-	C++ client language binding, sets the namespace to use for the code.
-@item ---list-types
-	Print all types defined in the idlfile. This option is used only
-	for BSE internally to ease transition from C to C++ types.
 @item ---core-cxx
 	Generate C++ core language binding.
 @item ---plugin
 	Generate C++ plugin language binding.
-@item ---header, ---source, ---interface, ---implementation, ---idl-line-numbers
-@item ---boxed, ---mixed, ---lower, ---qt, ---init <@var{NAME}>
-	These command line options are either broken or obsolete, they
-	will be removed or replaced sooner or later.
+@item ---list-types
+	Print all types defined in the idlfile. This option is used only
+	for BSE internally to ease transition from C to C++ types.
+@c Language binding options:
+@item ---header (default)
+	Generate header file.
+@item ---source
+	Generate source file.
+@item ---prefix <@var{prefix}>
+	C host/client language binding option, sets the prefix for C functions. The prefix
+	ensures that no symbol clashes will occur between different programs/libraries
+	which are using a binding, so it is important to set it to something unique to your
+	application/library.
+@item ---init <@var{name}>
+	Set the name of the init function for C host/core bindings.
+@item ---namespace <@var{namespace}>
+	C++ client language binding, sets the namespace to use for the code. The namespace
+	ensures that no symbol clashes will occur between different programs/libraries
+	which are using a binding, so it is important to set it to something unique to your
+	application/library.
+@item ---lower (default)
+	Select lower case identifiers in the C++ client language binding (create_midi_synth).
+@item ---mixed
+	Select mixed case identifiers in the C++ client language binding (createMidiSynth).
 @end table
 
 @unnumbered SEE ALSO
